# writing-a-c-compiler

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
lib/: Cargo.toml
lib/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs
lib/src/frontend/: ast.rs  parser.rs
lib/src/tacky/: emit.rs  mod.rs
src/: main.rs
