[workspace]
members = [
    "lib",
    "app",
]
resolver = "2"
default-members = ["app"]

[workspace.package]
name = "writing-a-c-compiler"
version = "0.1.0"
edition = "2021"
authors = ["David Binder"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BinderDavid/writing-a-c-compiler"
categories = ["compilers"]
