[package]
name = "tacky"

# Inherited from workspace Cargo.toml
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "tacky"
path = "src/main.rs"

[dependencies]
tacky-lib = { path = "../lib"}
clap = { version = "4.5.17", features = ["derive"]}